fix: add cross-browser support of vertical alignment of the content

--- a/css/style.css
+++ b/css/style.css
@@ -54,17 +54,27 @@ a {
     font-size: 32px;
 }
 
-#info {
-    width: 900px;
-    height: 300px;
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
 .underline:hover {
     text-decoration: underline;
     color: #aaaaaa;
+}
+
+.outer {
+    display: table;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+  
+.inner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 900px;
 }
